# smriti-sdk

./: .gitignore  Cargo.toml  README.md
examples/: test.rs  test_vector.rs
src/: client.rs  error.rs  lib.rs  model.rs  records.rs  vector.rs
