[package]
name = "smriti-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
mongodb = "3.5.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
