[package]
name = "smriti-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with Smriti services"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/smriti-sdk"
keywords = ["sdk", "api", "smriti"]
categories = ["api-bindings"]

[dependencies]
dotenv = "0.15.0"
mongodb = "3.5.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15"